# WebScraping

./: Produtos Novo.xlsx  README.md  main.py  pyproject.toml
